# sql-practice

./: .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
dojo/: config.py  db.py  grader.py  lab.py  lesson.py  plan.py  plan_lesson.py  schema.sql  seed.py  timing.py
interview_prep/: 01_schema_design_core.md  02_dml_practice.md  03_basic_queries.md  04_joins_inner.md  05_joins_left_and_findings.md  06_aggregation.md  07_subqueries.md  08_many_to_many.md  09_graph_one_hop.md  10_graph_recursive.md  11_window_functions.md  12_normalization_critique.md  13_efficiency_reasoning.md  14_capstone.md  README.md
interview_prep/answers/: 01_schema_design_core.md  02_dml_practice.md  03_basic_queries.md  04_joins_inner.md  05_joins_left_and_findings.md  06_aggregation.md  07_subqueries.md  08_many_to_many.md  09_graph_one_hop.md  10_graph_recursive.md  11_window_functions.md  12_normalization_critique.md  13_efficiency_reasoning.md  14_capstone.md
lessons/00_setup/: README.md  expected.sql  indexes.sql  solution.sql  test_lesson.py
lessons/01_select_filter/: README.md  expected.sql  indexes.sql  solution.sql  test_lesson.py
lessons/02_first_index/: README.md  expected.sql  indexes.sql  solution.sql  test_lesson.py
lessons/03_composite_index/: README.md  expected.sql  indexes.sql  solution.sql  test_lesson.py
lessons/04_left_prefix/: README.md  expected.sql  indexes.sql  solution.sql  test_lesson.py
tests/: test_config.py  test_grader.py  test_lesson_loader.py  test_plan.py  test_smoke.py  test_timing.py
(+66 files in other folders)
